[package]
name = "gerber_types"
version = "0.4.0"
documentation = "https://docs.rs/gerber-types/"
repository = "https://github.com/MakerPnP/gerber-types"
homepage = "https://github.com/MakerPnP/gerber-types"
license = "MIT OR Apache-2.0"
authors = [
    "Danilo Bargen <mail@dbrgn.ch>",
    "Dominic Clifton <me@dominicclifton.name>",
]
description = "Types and code generation for Gerber files (RS-274X)."
readme = "README.md"
keywords = ["gerber", "pcb", "rs274x", "cad", "cam"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]
edition = "2018"

[dependencies]
chrono = "0.4"
num-rational = "0.4"
thiserror = "2.0"
uuid = "1"
strum = "0.27.1"
strum_macros = "0.27.1"
